--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "dependencies": {
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
+    "mobx": "^6.3.0",
+    "mobx-keystone": "^0.57.0",
+    "mobx-react-lite": "^3.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-get-random-values": "~1.7.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
